--- a/demo/css/demo.css
+++ b/demo/css/demo.css
@@ -19,5 +19,6 @@ body {
 }
 
 .list-group-item {
-	background-color: rgba(255,255,255,0.616)
+	background-color: rgba(255,255,255,0.616);
+	overflow: auto;
 }
