--- a/demo/css/demo2.css
+++ b/demo/css/demo2.css
@@ -13,3 +13,20 @@
 body {
 	background-image: url("../img/background.png");
 }
+
+body, html {
+	width: 100%;
+	height: 100%;
+	margin:0;
+	font-family:"微软雅黑";
+}
+
+#allmap {
+	width:100%;
+	height:500px;
+}
+
+p {
+	margin-left:5px;
+	font-size:14px;
+}
